Fixed URL clipping/project section padding/display issues + removed inline styling

--- a/main.css
+++ b/main.css
@@ -169,6 +169,11 @@ h2 {
   animation: fadeRaise 2s ease;
 }
 
+.header-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
 p {
   font-family: courier;
 }
@@ -257,6 +262,7 @@ a {
   position: sticky;
   top: 0;
   z-index: 1;
+  border-bottom: 1px solid var(--black);
   user-select: none;
 }
 
@@ -335,6 +341,11 @@ a {
   align-items: center;
   text-align: center;
   top: -50%;
+}
+
+#splash-screen-flex-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 #name-title {
@@ -531,12 +542,17 @@ a {
   flex-direction: column;
   align-items: center;
   background-color: var(--darker-grey);
-  padding: 3em 2em 0 2em;
+}
+
+#project-header-wrapper {
+  width: 100%;
+  padding-top: 3em;
 }
 
 #project-list {
   display: grid;
   gap: 1em;
+  padding: 0 5em;
   animation: fadeLower 2s ease;
 }
 
@@ -546,13 +562,15 @@ a {
 }
 
 #project-list-under {
+  width: 100%;
+  z-index: 0;
+}
+
+#project-list-under-inner {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
-  margin-top: 2em;
-  padding-bottom: 3em;
-  z-index: 0;
+  padding: 2em 2em 3em 2em;
 }
 
 #project-list-arrow-button {
@@ -584,7 +602,6 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  width: 75vw;
   height: 100%;
   padding: 0 1.2em;
   transition: ease 0.3s;
@@ -814,6 +831,10 @@ a {
     font-size: 0.9em;
     padding: 1em;
   }
+
+  #project-list {
+    padding: 0 4em;
+  }
 }
 
 @media only screen and (min-width: 650px) {
@@ -924,6 +945,7 @@ a {
 @media only screen and (min-width: 1200px) {  
   #project-list {
     grid-template-columns: 1fr 1fr;
+    padding: 0 2em;
   }
 
   .project-row {
